# rosgpu_tests

./: CMakeLists.txt  package.xml
kernels/: hello_gpu.cl  sop2.cl
src/: hello_gpu.cpp  sum_of_pointcloud2.cpp  sum_of_pointcloud2_comparison.cpp  sum_of_pointcloud2_cpu.cpp
